UI start and spacing fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ input[type="radio"]:checked:after {
   border-radius: 24px;
   cursor: pointer;
   position: relative;
-  background-color: #e54649;
+  background-color: #3d7bb1;
   content: "";
   display: inline-block;
   visibility: visible;
